// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SampleTooltipContents renders the sample tooltip properly 1`] = `
<body>
  <div>
    <div
      class="tooltipDetails"
    >
      <div
        class="tooltipLabel"
      >
        Category:
      </div>
      <div>
        <span
          class="colored-square category-color-purple"
        />
        Layout
      </div>
    </div>
    <div
      class="tooltipDetails"
    >
      <div
        class="tooltipLabel"
      >
        Stack:
      </div>
    </div>
    <ul
      class="backtrace"
    >
      <li
        class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
      >
        <span
          class="colored-border category-color-purple"
          title="Layout"
        />
        nsRefreshDriver::AddStyleFlushObserver
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
      >
        <span
          class="colored-border category-color-grey"
          title="Other"
        />
        mozilla::GeckoRestyleManager::PostRestyleEvent
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
      >
        <span
          class="colored-border category-color-grey"
          title="Other"
        />
        mozilla::GeckoRestyleManager::ContentStateChanged
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
      >
        <span
          class="colored-border category-color-grey"
          title="Other"
        />
        mozilla::PresShell::ContentStateChanged
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
      >
        <span
          class="colored-border category-color-grey"
          title="Other"
        />
        nsDocument::ContentStateChanged
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
      >
        <span
          class="colored-border category-color-grey"
          title="Other"
        />
        mozilla::dom::Element::RemoveStates
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
      >
        <span
          class="colored-border category-color-grey"
          title="Other"
        />
        mozilla::EventStateManager::UpdateAncestorState
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
      >
        <span
          class="colored-border category-color-grey"
          title="Other"
        />
        mozilla::EventStateManager::SetContentState
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
      >
        <span
          class="colored-border category-color-grey"
          title="Other"
        />
        mozilla::EventStateManager::NotifyMouseOut
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
      >
        <span
          class="colored-border category-color-grey"
          title="Other"
        />
        mozilla::EventStateManager::GenerateMouseEnterExit
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
      >
        <span
          class="colored-border category-color-grey"
          title="Other"
        />
        mozilla::EventStateManager::PreHandleEvent
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
      >
        <span
          class="colored-border category-color-grey"
          title="Other"
        />
        mozilla::PresShell::HandleEventInternal
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
      >
        <span
          class="colored-border category-color-grey"
          title="Other"
        />
        mozilla::PresShell::HandlePositionedEvent
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
      >
        <span
          class="colored-border category-color-grey"
          title="Other"
        />
        mozilla::PresShell::HandleEvent
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
      >
        <span
          class="colored-border category-color-grey"
          title="Other"
        />
        nsViewManager::DispatchEvent
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
      >
        <span
          class="colored-border category-color-grey"
          title="Other"
        />
        nsView::HandleEvent
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
      >
        <span
          class="colored-border category-color-grey"
          title="Other"
        />
        nsChildView::DispatchEvent
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
      >
        <span
          class="colored-border category-color-grey"
          title="Other"
        />
        ChildViewMouseTracker::MouseMoved
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
      >
        <span
          class="colored-border category-color-grey"
          title="Other"
        />
        nsAppShell::Run
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
      >
        <span
          class="colored-border category-color-grey"
          title="Other"
        />
        nsAppStartup::Run
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <span
        class="colored-border ellipsis"
      />
      …
    </ul>
  </div>
</body>
`;

exports[`SampleTooltipContents renders the sample with "variable CPU cycles" CPU usage information properly 1`] = `
<body>
  <div>
    <div
      class="tooltipDetails"
    >
      <div
        class="tooltipLabel"
      >
        Category:
      </div>
      <div>
        <span
          class="colored-square category-color-yellow"
        />
        JavaScript
      </div>
    </div>
    <div
      class="tooltipDetails"
    >
      <div
        class="tooltipLabel"
      >
        CPU Usage:
      </div>
      <div>
        89% (800 variable CPU cycles over 1,000μs)
      </div>
    </div>
    <div
      class="tooltipDetails"
    >
      <div
        class="tooltipLabel"
      >
        Stack:
      </div>
    </div>
    <ul
      class="backtrace"
    >
      <li
        class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
      >
        <span
          class="colored-border category-color-yellow"
          title="JavaScript"
        />
        Ejs
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
      >
        <span
          class="colored-border category-color-yellow"
          title="JavaScript"
        />
        F
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
      >
        <span
          class="colored-border category-color-yellow"
          title="JavaScript"
        />
        Cjs
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
      >
        <span
          class="colored-border category-color-grey"
          title="Other"
        />
        B
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
      >
        <span
          class="colored-border category-color-grey"
          title="Other"
        />
        A
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
    </ul>
  </div>
</body>
`;

exports[`SampleTooltipContents renders the sample with ns CPU usage information properly 1`] = `
<body>
  <div>
    <div
      class="tooltipDetails"
    >
      <div
        class="tooltipLabel"
      >
        Category:
      </div>
      <div>
        <span
          class="colored-square category-color-yellow"
        />
        JavaScript
      </div>
    </div>
    <div
      class="tooltipDetails"
    >
      <div
        class="tooltipLabel"
      >
        CPU Usage:
      </div>
      <div>
        60% (600 µs over 1,000μs)
      </div>
    </div>
    <div
      class="tooltipDetails"
    >
      <div
        class="tooltipLabel"
      >
        Stack:
      </div>
    </div>
    <ul
      class="backtrace"
    >
      <li
        class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
      >
        <span
          class="colored-border category-color-yellow"
          title="JavaScript"
        />
        Ejs
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
      >
        <span
          class="colored-border category-color-yellow"
          title="JavaScript"
        />
        F
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
      >
        <span
          class="colored-border category-color-yellow"
          title="JavaScript"
        />
        Cjs
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
      >
        <span
          class="colored-border category-color-grey"
          title="Other"
        />
        B
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
      >
        <span
          class="colored-border category-color-grey"
          title="Other"
        />
        A
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
    </ul>
  </div>
</body>
`;

exports[`SampleTooltipContents renders the sample with µs CPU usage information properly 1`] = `
<body>
  <div>
    <div
      class="tooltipDetails"
    >
      <div
        class="tooltipLabel"
      >
        Category:
      </div>
      <div>
        <span
          class="colored-square category-color-yellow"
        />
        JavaScript
      </div>
    </div>
    <div
      class="tooltipDetails"
    >
      <div
        class="tooltipLabel"
      >
        CPU Usage:
      </div>
      <div>
        40% (400 µs over 1,000μs)
      </div>
    </div>
    <div
      class="tooltipDetails"
    >
      <div
        class="tooltipLabel"
      >
        Stack:
      </div>
    </div>
    <ul
      class="backtrace"
    >
      <li
        class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
      >
        <span
          class="colored-border category-color-yellow"
          title="JavaScript"
        />
        Ejs
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
      >
        <span
          class="colored-border category-color-yellow"
          title="JavaScript"
        />
        F
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
      >
        <span
          class="colored-border category-color-yellow"
          title="JavaScript"
        />
        Cjs
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
      >
        <span
          class="colored-border category-color-grey"
          title="Other"
        />
        B
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
      <li
        class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
      >
        <span
          class="colored-border category-color-grey"
          title="Other"
        />
        A
        <em
          class="backtraceStackFrameOrigin"
        />
      </li>
    </ul>
  </div>
</body>
`;
